--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -4,7 +4,8 @@ body {
     overflow-x: hidden;
 }
 
-.page {
-    position: relative;
-    top: 5rem;
-}
+// .page {
+//     position: relative;
+//     top: 6rem;
+//     scroll-margin-top: 6rem;
+// }
